--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,11 @@
 	path = web
 	url = https://github.com/oca/web
 	branch = 12.0
+[submodule "partner-contact"]
+	path = partner-contact
+	url = https://github.com/oca/partner-contact
+	branch = 12.0
+[submodule "mis-builder"]
+	path = mis-builder
+	url = https://github.com/oca/mis-builder
+	branch = 12.0
