--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,7 @@
 	path = mis-builder
 	url = https://github.com/oca/mis-builder
 	branch = 12.0
+[submodule "community-data-files"]
+	path = community-data-files
+	url = https://github.com/oca/community-data-files
+	branch = 12.0
